--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -604,7 +604,7 @@ body.home {
 
          .background-overlay {
             background-image: url(../img/main-img-2.webp);
-            background-attachment: fixed;
+
             background-position: 50% 90%;
             background-size: cover;
             background-repeat: no-repeat;
@@ -616,6 +616,10 @@ body.home {
             position: absolute;
             top: 0;
             left: 0;
+
+            @media only screen and (min-width: 1024px) and (max-width: 1440px) {
+               background-attachment: fixed;
+            }
          }
 
          .values {
