--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -165,7 +165,6 @@ body.home {
 
          .background-overlay {
             background-image: url(../img/projects/projects-overlay.webp);
-            background-attachment: fixed;
             background-position: 40% 45%;
             background-size: cover;
             background-repeat: no-repeat;
@@ -177,6 +176,10 @@ body.home {
             position: absolute;
             top: 0;
             left: 0;
+
+            @media only screen and (min-width: 1024px) and (max-width: 1440px) {
+               background-attachment: fixed;
+            }
          }
 
          .project-values {
